--- a/glass-website/style copy.css
+++ b/glass-website/style copy.css
@@ -10,6 +10,7 @@ h1 {
   font-size: 3rem;
   opacity: 0.8;
 }
+
 h2,
 p {
   color: #658ec6;
@@ -46,6 +47,7 @@ main {
   backdrop-filter: blur(2rem);
   display: flex;
 }
+
 .circle1,
 .circle2 {
   background: white;
@@ -62,12 +64,14 @@ main {
 
 .circle1 {
   top: 5%;
-  right: 15%;
+  right: 10%;
 }
+
 .circle2 {
   bottom: 5%;
   left: 10%;
 }
+
 .dashboard {
   flex: 1;
   display: flex;
@@ -82,12 +86,14 @@ main {
   );
   border-radius: 2rem;
 }
+
 .link {
   display: flex;
-  margin: 2rem 0rem;
+  margin: 2rem;
   padding: 1rem 5rem;
   align-items: center;
 }
+
 .link h2 {
   padding: 0rem 2rem;
 }
@@ -109,13 +115,15 @@ main {
   top: -10%;
   right: 10%;
 }
+
 .pro h2 {
   width: 40%;
   color: white;
   font-weight: 600;
 }
 
-/* GAMES */
+/* Games Section*/
+
 .status {
   margin-bottom: 3rem;
 }
@@ -149,7 +157,7 @@ main {
   border-radius: 1rem;
   margin: 2rem 0rem;
   padding: 2rem;
-  box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
+  box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.2);
   justify-content: space-between;
 }
 
@@ -161,6 +169,7 @@ main {
   position: relative;
   overflow: hidden;
 }
+
 .progress::after {
   content: "";
   width: 100%;
@@ -169,12 +178,12 @@ main {
   position: absolute;
   left: 60%;
 }
+
 .card-info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-
 .percentage {
   font-weight: bold;
   background: linear-gradient(to right top, #65dfc9, #6cdbeb);
