--- a/glass-website/style.css
+++ b/glass-website/style.css
@@ -4,25 +4,6 @@
   box-sizing: border-box;
 }
 
-h1 {
-  color: #426696;
-  font-weight: 600;
-  font-size: 3rem;
-  opacity: 0.8;
-}
-h2,
-p {
-  color: #658ec6;
-  font-weight: 500;
-  opacity: 0.8;
-}
-
-h3 {
-  color: #426696;
-  font-weight: 600;
-  opacity: 0.8;
-}
-
 main {
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
@@ -46,20 +27,20 @@ main {
   backdrop-filter: blur(2rem);
   display: flex;
 }
+
 .circle1,
 .circle2 {
   background: white;
   background: linear-gradient(
     to right bottom,
-    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.3)
   );
+  border-radius: 50%;
   height: 20rem;
   width: 20rem;
   position: absolute;
-  border-radius: 50%;
 }
-
 .circle1 {
   top: 5%;
   right: 15%;
@@ -68,6 +49,51 @@ main {
   bottom: 5%;
   left: 10%;
 }
+
+.circle3,
+.circle4 {
+  background: rgb(226, 241, 241);
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.3)
+  );
+  border-radius: 50%;
+  height: 12rem;
+  width: 12rem;
+  position: absolute;
+}
+
+.circle3 {
+  top: 15%;
+  left: 5%;
+}
+.circle4 {
+  bottom: 25%;
+  right: 8%;
+  height: 8rem;
+  width: 8rem;
+}
+
+h1 {
+  color: #426696;
+  font-weight: 600;
+  font-size: 3rem;
+  opacity: 0.8;
+}
+h2,
+p {
+  color: #658ec6;
+  font-weight: 500;
+  opacity: 0.8;
+}
+
+h3 {
+  color: #426696;
+  font-weight: 600;
+  opacity: 0.8;
+}
+
 .dashboard {
   flex: 1;
   display: flex;
@@ -82,12 +108,19 @@ main {
   );
   border-radius: 2rem;
 }
+
+.user img {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+}
 .link {
   display: flex;
   margin: 2rem 0rem;
   padding: 1rem 5rem;
   align-items: center;
 }
+
 .link h2 {
   padding: 0rem 2rem;
 }
@@ -152,7 +185,6 @@ main {
   box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
   justify-content: space-between;
 }
-
 .progress {
   background: linear-gradient(to right top, #65dfc9, #6cdbeb);
   width: 100%;
@@ -169,10 +201,12 @@ main {
   position: absolute;
   left: 60%;
 }
+
 .card-info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-left: 0.3rem;
 }
 
 .percentage {
